--- a/public/games/index.ejs
+++ b/public/games/index.ejs
@@ -12,6 +12,6 @@
 	<script>
 		var gameParams = "<%=gameParams%>";
 	</script>
-	<script type="text/javascript" src="js/<%=gameName%>.js"></script>
+	<script type="text/javascript" src="js/<%=gameName%>/<%=gameName%>.js"></script>
 </body>
 </html>
